# mrs-uwb-sim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  source_all.bash
.github/workflows/: melodic.yml
action/: FlyTask.action
config/: uwbsimulator.yaml
include/: uwbsimulator.h
include/fly_simulate/: fly_simulate.h
launch/: empty_world.launch  gazebo_world_launcher.launch  multi_jackal_empty_world.launch  multi_jackal_gazebo_world_launcher.launch  tiers_mrs_hector_uavs.launch  tiers_mrs_px4.launch  uwb_sim.launch
launch/control/: control.launch
launch/descriptions/: description.launch  description_with_anchor.launch
launch/fly_simulate/: fly_simulate.launch
launch/husky/: husky_control.launch  husky_description.launch
launch/scenarios/: scenario1.launch  scenario2.launch  scenarioDroneMobile.launch  scenarioDroneMobile_px4.launch  scenarioRoom.launch
launch/spawners/: hector_uav_spawner.launch  husky_spawner.launch  px4_sitl_uav_mavros_spawner.launch  single_husky_spawner.launch  spawn_jackal_with_beacon.launch  spawn_jackal_with_beacon_and_anchor.launch  spawn_uav_mavros_sitl.launch
models/: husky.urdf.xacro
models/meshes/: top_plate.dae  top_plate.stl
models/sdf/: iris.sdf.jinja
models/urdf/: decorations.urdf.xacro  husky.urdf.xacro  wheel.urdf.xacro
msg/gtec_msgs/: DWRanging.msg  ESP32S2FTMFrame.msg  ESP32S2FTMRanging.msg  GenericRanging.msg  PozyxRanging.msg  PozyxRangingWithCir.msg  Ranging.msg  RangingDiff.msg  UWBRanging.msg
src/: UwbPlugin.cpp  uwbsimulator.cpp
src/fly_simulate/: fly_simulate_node.cpp
src/uwb_plugin/: TagPosPublisherPlugin.cpp  UwbPlugin.cpp
urdf/: custom_anchor_jackal.urdf.xacro  custom_hector_drone.gazebo.xacro  custom_jackal.urdf.xacro  custom_sjtu_drone.urdf.xacro
urdf/jackal/: jackal.urdf.xacro
worlds/: tiers_variety.world
